
VERSION 0.7.2cvs
================

2005-08-25  Vincent Richard  <vincent@vincent-richard.net>

 * Tests: moved to CppUnit for unit tests framework.

2005-08-23  Vincent Richard  <vincent@vincent-richard.net>

 * All sources: renamed 'vmime::messaging' to 'vmime::net'. An alias has been
   kept for compatibility with previous versions (its use should be considered
   as deprecated).

2005-08-19  Vincent Richard  <vincent@vincent-richard.net>

 * exception.hpp: vmime::exception now inherits from std::exception.

2005-07-25  Vincent Richard  <vincent@vincent-richard.net>

 * Messaging folder: added a FETCH_IMPORTANCE flag to fetch the fields used
   with 'misc::importanceHelper'.

2005-07-23  Vincent Richard  <vincent@vincent-richard.net>

 * POP3, IMAP, maildir: fixed getMessages() when default arguments are given:
   no message were returned, instead of the real message count.

2005-07-15  Vincent Richard  <vincent@vincent-richard.net>

 * *attachment, messageParser: added a getName() parameter to retrieve
   the attachment filename either from the "filename" parameter of the
   "Content-Disposition" field, or from the "name" parameter of the
   "Content-Type" field (if available).

2005-07-13  Vincent Richard  <vincent@vincent-richard.net>

 * All files: added reference counting and smart pointers to simplify the
   use of VMime objects. Please see README.refcounting for more information.

2005-07-06  Vincent Richard  <vincent@vincent-richard.net>

 * *contentHandler.{hpp|cpp}: added extractRaw() method to allow extracting
   data without performing any decoding.

2005-06-22  Vincent Richard  <vincent@vincent-richard.net>

 * Started version 0.7.2.


VERSION 0.7.1
=============

2005-06-21  Vincent Richard  <vincent@vincent-richard.net>

 * Fixed compilation errors with g++ 4.0.

 * defaultParameter.cpp: fixed a bug in RFC-2231 implementation.

2005-06-13  Vincent Richard  <vincent@vincent-richard.net>
