@@ -38,8 +38,8 @@ public:
 
 	void generate(utility::outputStream& os, const vmime::encoding& enc, const string::size_type maxLineLength = lineLengthLimits::infinite) const;
 
-	void extract(utility::outputStream& os) const;
-	void extractRaw(utility::outputStream& os) const;
+	void extract(utility::outputStream& os, utility::progressionListener* progress = NULL) const;
+	void extractRaw(utility::outputStream& os, utility::progressionListener* progress = NULL) const;
 
 	const string::size_type getLength() const;
 
