@@ -2,6 +2,10 @@
 VERSION 0.7.2cvs
 ================
 
+2005-09-03  Vincent Richard  <vincent@vincent-richard.net>
+
+ * encoder*, *contentHandler: added progression notifications.
+
 2005-08-25  Vincent Richard  <vincent@vincent-richard.net>
 
  * Tests: moved to CppUnit for unit tests framework.
